fix layout spacing; formatting

--- a/assets/css/publications.css
+++ b/assets/css/publications.css
@@ -53,7 +53,7 @@ screen and (min-width: 480px) {
 }
 
 .publications {
-  margin-top: 2rem;
+  margin-top: 0;
 }
 
 .publications h1 {
